--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic. </p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic.</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic.</p>
+	</div>
+	<ul>
+		<li>first item</li>
+		<li>second item</li>
+		<li>third item</li>
+		<li>fourth item</li>
+		<li>fifth item</li>
+		
+	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
 
