--- a/main.html
+++ b/main.html
@@ -8,12 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div>
+	<article>
 		<p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic. </p>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic.</p>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic.</p>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, hic.</p>
-	</div>
+	</article>
+		
 	<ul>
 		<li>first item</li>
 		<li>second item</li>
